# godot-slang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYRIGHT  LICENSE  README.md  SConstruct  editor_builders.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  release.yml
demo/: MyShaders.slang  MyShaders.slang.import  README.md  cloud_noise.glsl.import  example.gd.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
demo/Scripts/: test.gd  test.gd.uid
demo/addons/godot-slang/: godot-slang.gd  godot-slang.gd.uid  godot-slang.gdextension  godot-slang.gdextension.uid  plugin.cfg
demo/addons/godot-slang/assets/: slang-icon-grey.svg.import  slang-icon.svg.import
demo/addons/godot-slang/import/: import_plugin.gd  import_plugin.gd.uid
demo/addons/godot-slang/resources/: slang_file.gd  slang_file.gd.uid
demo/scenes/: Main.tscn
src/: register_types.cpp  slang_module.h  slang_program.h  slang_session.cpp  slang_session.h  test_compile.cpp  test_compile.h
src/doc_classes/: TestCompile.xml
src/editor-plugin/: slang_editor_plugin.cpp  slang_editor_plugin.h  slang_import_plugin.cpp  slang_import_plugin.h
